fix select size and position on mobile

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 18px 39px 18px 24px;
+  padding: 18px 24px;
   background-color: var(--navigation);
   color: #fff;
 }
